[gd_scene load_steps=9 format=3 uid="uid://bki3okurnhd2i"]

[ext_resource type="Script" path="res://scripts/Lose.gd" id="1_74s27"]
[ext_resource type="Texture2D" uid="uid://ch83parrqxh5o" path="res://resources/bgnd.png" id="2_i4ply"]
[ext_resource type="Texture2D" uid="uid://dbo7kh6xv5l4s" path="res://Textures/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Cheese.png" id="3_cfmfh"]
[ext_resource type="Texture2D" uid="uid://etineyfsipw2" path="res://Textures/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Tomato.png" id="4_p8f8a"]
[ext_resource type="Texture2D" uid="uid://cdml8ieny6iva" path="res://Textures/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Pepperoni.png" id="5_px1q0"]
[ext_resource type="Texture2D" uid="uid://dpr3pdgctukcu" path="res://resources/Aseprite Files/images.jpeg" id="6_7qpws"]
[ext_resource type="Theme" uid="uid://5ccxd10jvfld" path="res://MenuTheme.tres" id="7_77nou"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bmdef"]
emission_shape = 3
emission_box_extents = Vector3(576, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = 25.0
angular_velocity_max = 25.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 5.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_74s27")

[node name="background2" type="Sprite2D" parent="."]
position = Vector2(540, 461)
scale = Vector2(0.464653, 0.59261)
texture = ExtResource("2_i4ply")

[node name="background3" type="Sprite2D" parent="."]
position = Vector2(540, 768)
scale = Vector2(0.464653, 0.59261)
texture = ExtResource("2_i4ply")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(541.5, 154.625)
scale = Vector2(0.463153, 0.59261)
texture = ExtResource("2_i4ply")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(576, 0)
amount = 4
process_material = SubResource("ParticleProcessMaterial_bmdef")
texture = ExtResource("3_cfmfh")
lifetime = 5.0

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(576, 0)
amount = 4
process_material = SubResource("ParticleProcessMaterial_bmdef")
texture = ExtResource("4_p8f8a")
lifetime = 5.0

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(576, 0)
amount = 4
process_material = SubResource("ParticleProcessMaterial_bmdef")
texture = ExtResource("5_px1q0")
lifetime = 5.0

[node name="Images" type="Sprite2D" parent="."]
position = Vector2(869, 389)
scale = Vector2(1.59333, 1.57556)
texture = ExtResource("6_7qpws")

[node name="Tittle" type="Label" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 224.0
offset_right = 621.0
offset_bottom = 431.0
scale = Vector2(1.06219, 0.988945)
theme = ExtResource("7_77nou")
text = "Te has muerto
rata inmunda"
horizontal_alignment = 1

[node name="restart" type="Button" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 298.0
offset_top = 399.0
offset_right = 451.0
offset_bottom = 452.0
theme = ExtResource("7_77nou")
text = "Restart
"
flat = true

[node name="disconnect" type="Button" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 264.0
offset_top = 451.0
offset_right = 480.0
offset_bottom = 504.0
theme = ExtResource("7_77nou")
text = "Disconnect
"
flat = true

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 331.0
offset_top = 507.0
offset_right = 415.0
offset_bottom = 560.0
theme = ExtResource("7_77nou")
text = "Exit"
flat = true

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
